--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,10 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverageExclude": [
+              "**/stubs/**/*"
+            ]
           }
         }
       }
